--- a/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
@@ -49,7 +49,7 @@
     %\input{../tds/td_6.tex}
 
 
-    \setcounter{section}{0}
+    % \setcounter{section}{0}
 
     \newpage
     \section{Examen Blanc}\label{sec:Examen_Blanc}
