update td4 graphs and add more figures

--- a/src/HAI711I_Graphes_Structures/tds/td_main.tex
+++ b/src/HAI711I_Graphes_Structures/tds/td_main.tex
@@ -45,6 +45,13 @@
     \setcounter{section}{4}
     \setcounter{tdcounter}{0}
     \input{../tds/exam_blanc.tex}
+    
+    \newpage
+    \section*{TD4 --- Connectivité}\label{sec:TD4}
+    \addcontentsline{toc}{section}{\nameref{sec:TD4}}
+    \setcounter{section}{5}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_4.tex}
 
 \end{document}
 
