--- a/src/common/common_header.tex
+++ b/src/common/common_header.tex
@@ -48,7 +48,7 @@
 \usepackage{pgfplots}            % Plotting graphs with TikZ
 \pgfplotsset{compat=1.18}        % Set pgfplots compatibility version
 \usetikzlibrary{positioning, shapes, arrows.meta, external}          % Arrow tips for TikZ diagrams
-\tikzexternalize[prefix=figures/] % Enable TikZ externalization for faster compilation
+% \tikzexternalize[prefix=figures/] % Enable TikZ externalization for faster compilation
 
 
 % ==============================================================================
