--- a/src/common/common_header.tex
+++ b/src/common/common_header.tex
@@ -49,7 +49,7 @@
 \pgfplotsset{compat=1.18}        % Set pgfplots compatibility version
 \usetikzlibrary{positioning, shapes, arrows.meta, external}          % Arrow tips for TikZ diagrams
 % \tikzexternalize[prefix=figures/] % Enable TikZ externalization for faster compilation
-
+% test 2
 
 % ==============================================================================
 % COLOR MANAGEMENT
