--- a/src/HAI711I_Graphes_Structures/tds/exam_blanc.tex
+++ b/src/HAI711I_Graphes_Structures/tds/exam_blanc.tex
@@ -14,7 +14,7 @@
 
         \vspace{0.2cm}
         \begin{figure}[H]
-            \CenterFloatBoxes{}		% centers the floatrow contents horizontally
+            \CenterFloatBoxes{}
             \begin{floatrow}
                 \input{../assets/tikz/exam_blanc_ex_1_2_a.tex}
 
@@ -26,7 +26,7 @@
 
         \vspace{0.2cm}
 		\begin{figure}[H]
-            \CenterFloatBoxes{}		% centers the floatrow contents horizontally
+            \CenterFloatBoxes{}
             \begin{floatrow}
                 \input{../assets/tikz/exam_blanc_ex_1_3_a.tex}
 
@@ -37,7 +37,7 @@
         Ensuite, on peut faire passer 1 de flot par \(sadp\) et 3 par \(sbep\):
 
         \begin{figure}[H]
-            \CenterFloatBoxes{}		% centers the floatrow contents horizontally
+            \CenterFloatBoxes{}
             \begin{floatrow}
                 \input{../assets/tikz/exam_blanc_ex_1_4_a.tex}
 
@@ -48,7 +48,7 @@
         Il ne reste plus qu'à faire passer une dernière fois 1 de flot par \(sadbep\) et on aura fini:
 
         \begin{figure}[H]
-            \CenterFloatBoxes{}		% centers the floatrow contents horizontally
+            \CenterFloatBoxes{}
             \begin{floatrow}
                 \input{../assets/tikz/exam_blanc_ex_1_5_a.tex}
 
@@ -310,7 +310,7 @@
 
             \vspace{0.2cm}
             \begin{figure}[H]
-                \CenterFloatBoxes{}		% centers the floatrow contents horizontally
+                \CenterFloatBoxes{}
                 \begin{floatrow}
                     \input{../assets/tikz/exam_blanc_ex_5_1_a.tex}
 
@@ -322,7 +322,7 @@
 
             \vspace{0.2cm}
             \begin{figure}[H]
-                \CenterFloatBoxes{}		% centers the floatrow contents horizontally
+                \CenterFloatBoxes{}
                 \begin{floatrow}
                     \input{../assets/tikz/exam_blanc_ex_5_2_a.tex}
 
