--- a/src/HAI711I_Graphes_Structures/tds/td_1.tex
+++ b/src/HAI711I_Graphes_Structures/tds/td_1.tex
@@ -92,7 +92,7 @@
 			\item On a les hypercubes suivants:
 			
 			\begin{figure}[H]
-				\CenterFloatBoxes{}		% centers the floatrow contents horizontally
+				\CenterFloatBoxes{}
 				\begin{floatrow}
 					\input{../assets/tikz/td_1_ex_2_q1_a.tex}
 
@@ -103,7 +103,7 @@
 			\end{figure}
 
 			\begin{figure}[H]
-				\CenterFloatBoxes{}		% centers the floatrow contents horizontally
+				\CenterFloatBoxes{}
 				\begin{floatrow}
 					\input{../assets/tikz/td_1_ex_2_q1_d.tex}
 				\end{floatrow}
@@ -183,7 +183,7 @@
 			car ils sont adjacents. Donc \(C\) ne peut pas être de longueur impaire.
 
 			\begin{figure}[H]
-				\CenterFloatBoxes{}		% centers the floatrow contents horizontally
+				\CenterFloatBoxes{}
 				\begin{floatrow}
 					\input{../assets/tikz/td_1_ex_3_1_a.tex}
 
@@ -198,7 +198,7 @@
 			tous les sommets de niveau 3 en bleu, et ainsi de suite.
 
 			\begin{figure}[H]
-				\CenterFloatBoxes{}		% centers the floatrow contents horizontally
+				\CenterFloatBoxes{}
 				\begin{floatrow}
 					\input{../assets/tikz/td_1_ex_3_2_a.tex}
 
