--- a/src/HAI718I_Probas_Stats/tds/td_main.tex
+++ b/src/HAI718I_Probas_Stats/tds/td_main.tex
@@ -19,7 +19,7 @@
     \tableofcontents
 
     \newpage
-    \section*{TD1 --- First sheet title}\label{sec:TD1}
+    \section*{TD1 --- Introduction et lois usuelles}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
