fin ex1 cc1 RO et debut ex2

--- a/src/HAI722I_Recherche_Operationnelle/assets/module_header.tex
+++ b/src/HAI722I_Recherche_Operationnelle/assets/module_header.tex
@@ -43,3 +43,8 @@
 \usetikzlibrary{shapes,arrows,positioning,calc,fit,backgrounds,angles,quotes}
 
 \newcommand{\becomes}{\begin{center}\(\downarrow\)\end{center}}
+
+
+\usepackage{floatrow}
+\usepackage{caption}
+
