--- a/src/HAI722I_Recherche_Operationnelle/tds/cc_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/tds/cc_1.tex
@@ -257,7 +257,149 @@
 % ----- Solutions exo 4 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ %
-		
+        On commence par remarquer que la première contrainte est inutile, elle est toujours vérifiée si la troisième contrainte est vérifiée.
+        On peut donc réécrire le problème \(\mathcal{P}_0\) comme suit:
+        \begin{equation*}
+            \mathcal{P}_0 = 
+            \begin{cases}
+                \max z(x) = 35x_1 + 50x_2\\
+                x_1 + x_2 \leq 20\\
+                2x_1 + 3x_2 \leq 40\\
+                x_1, x_2 \geq 0
+            \end{cases}
+        \end{equation*}
+
+        On introduit les variables d'écart \(x_3\) et \(x_4\) pour transformer les inégalités en égalités:
+        \begin{equation*}
+            \mathcal{P}_0 = 
+            \begin{cases}
+                \max z(x) = 35x_1 + 50x_2 + 0x_3 + 0x_4\\
+                x_1 + x_2 + x_3 = 20\\
+                2x_1 + 3x_2 + x_4 = 40\\
+                x_1, x_2, x_3, x_4 \geq 0
+            \end{cases}
+        \end{equation*}
+
+        \begin{enumerate}
+            \item On peut maintenant écrire le tableau initial:
+            \begin{center}
+                \begin{tabular}{|ccc|cccc|} % chktex 44
+                    \hline  % chktex 44
+                    & \ &\(c\)&\(35\)&\(50\)&\(0\)&\(0\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_1^{1}=x_3\)} &\(20\)&\(1\)&\(1\)&\(1\)&\(0\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{1}=x_4\)} &\(40\)&\(2\)&\(3\)&\(0\)&\(1\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(0\)} &\(-35\)&\(-50\)&\(0\)&\(0\)\\
+                    \hline % chktex 44
+                \end{tabular}
+            \end{center}
+            On voit que c'est \(x_2\) qui entre dans la base. On calcule les rapports:
+            \begin{equation*}
+                \frac{20}{1} = 20, \quad \frac{40}{3} < 20.
+            \end{equation*}
+            Donc \(x_4\) sort de la base. On effectue le pivot:
+            \begin{center}
+                \begin{tabular}{|ccc|cccc|} % chktex 44
+                    \hline  % chktex 44
+                    & \ &\(c\)&\(35\)&\(50\)&\(0\)&\(0\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_1^{2}=x_3\)} &\(\frac{20}{3}\)&\(\frac{1}{3}\)&\(0\)&\(1\)&\(-\frac{1}{3}\vphantom{\dfrac11}\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(50\)}& \multicolumn{1}{c|}{\(x_2^{2}=x_2\)} &\(\frac{40}{3}\)&\(\frac{2}{3}\)&\(1\)&\(0\)&\(\frac{1}{3}\vphantom{\dfrac11}\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(\frac{2000}{3}\)} &\(-\frac{5}{3}\)&\(0\)&\(0\)&\(\frac{50}{3}\vphantom{\dfrac11}\)\\
+                    \hline % chktex 44
+                \end{tabular}
+            \end{center}
+            On voit que \(x_1\) entre dans la base. On calcule les rapports:
+            \begin{equation*}
+                \frac{20/3}{1/3} = 20, \quad \frac{40/3}{2/3} = 20.
+            \end{equation*}
+            On peut choisir de faire sortir \(x_3\) de la base. On effectue le pivot:
+            \begin{center}
+                \begin{tabular}{|ccc|cccc|} % chktex 44
+                    \hline  % chktex 44
+                    & \ &\(c\)&\(35\)&\(50\)&\(0\)&\(0\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(35\)}& \multicolumn{1}{c|}{\(x_1^{3}=x_1\)} &\(20\)&\(1\)&\(0\)&\(3\)&\(-1\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(50\)}& \multicolumn{1}{c|}{\(x_2^{3}=x_2\)} &\(0\)&\(0\)&\(1\)&\(-2\)&\(1\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(700\)} &\(0\)&\(0\)&\(5\)&\(15\)\\
+                    \hline % chktex 44
+                \end{tabular}
+            \end{center}
+
+            Tous les coefficients de la ligne \(z(x)\) sont positifs ou nuls, donc la solution optimale est atteinte.
+            
+            La solution optimale est donc \(x^* = (20,0)\) avec \(z(x^*) = 700\).
+
+            \item Le dual de \(\mathcal{P}_0\) est:
+            \begin{equation*}
+                \mathcal{D}_0 = 
+                \begin{cases}
+                    \min z(y) = 20y_1 + 40y_2\\
+                    y_1 + 2y_2 \geq 35\\
+                    y_1 + 3y_2 \geq 50\\
+                    y_1, y_2 \geq 0
+                \end{cases}
+            \end{equation*}
+
+            \item À partir du tableau final du primal, on lit directement la solution du dual:
+            \begin{equation*}
+                y^* = (5, 15)
+            \end{equation*}
+            avec \(z(y^*) = 20 \times 5 + 40 \times 15 = 700\).
+
+            La valeur optimale du primal et du dual coïncident, comme attendu et la solution optimale du dual vérifie bien les contraintes:
+            \begin{equation*}
+                \begin{cases}
+                    5 + 2 \times 15 = 35 \geq 35\\
+                    5 + 3 \times 15 = 50 \geq 50
+                \end{cases}
+            \end{equation*}
+            On note que les deux contraintes sont serrées.
+
+            \item On vérifie les écarts complémentaires:
+            % TODO a remplir
+
+            \item En modifiant le vecteur \(b\) en \(b' = (75, 15, 50)\), on modifie les constantes des contraintes:
+            \begin{equation*}
+                \begin{cases}
+                    4x_1 + 6x_2 \leq 75\\
+                    x_1 + x_2 \leq 15\\
+                    2x_1 + 3x_2 \leq 50
+                \end{cases}
+            \end{equation*}
+            C'est alors la troisième contrainte qui devient inutile, elle est toujours vérifiée si la première contrainte est vérifiée.
+            Le nouveau problème devient:
+            \begin{equation*}
+                \mathcal{P}_1 = 
+                \begin{cases}
+                    \max z(x) = 35x_1 + 50x_2\\
+                    4x_1 + 6x_2 \leq 75\\
+                    x_1 + x_2 \leq 15\\
+                    x_1, x_2 \geq 0
+                \end{cases}
+            \end{equation*}
+
+            \begin{enumerate}
+                \item La solution optimale du problème change car les coefficients changés correspondent à des contraintes serrées à l'optimum.
+                \item Deux méthodes sont possibles:
+                \begin{itemize}
+                    \item Recommencer la méthode du simplexe à partir du tableau initial du nouveau problème \(\mathcal{P}_1\).
+                    \item Utiliser la solution optimale du dual du problème initial comme point de départ pour résoudre le dual du nouveau problème à condition de vérifier que cette solution est faisable pour le nouveau dual.
+                \end{itemize}
+            \end{enumerate}
+        \end{enumerate}
 	\end{td-sol}
 }{}
 
